--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "axios": "^1.7.2",
     "cypress": "^13.10.0",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.4",
     "mongodb": "^6.6.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "stepDefinitions": "cypress/e2e/step-definitions/**/*.js"
   }
 }
