--- a/env/.env.dev
+++ b/env/.env.dev
@@ -1,2 +1,5 @@
 MONGODB_URL=mongodb://root:example@localhost:27017
 MONGODB_NAME=devdb
+MOCK_API=http://localhost:3030
+REMITTANCE_DATA_URL=http://localhost:3030
+TEST_URL=https://www.google.com
