--- a/env/.env.local
+++ b/env/.env.local
@@ -2,3 +2,4 @@ MONGODB_URL=mongodb://root:example@localhost:27017
 MONGODB_NAME=test
 MOCK_API=http://localhost:3030
 REMITTANCE_DATA_URL=http://localhost:3030
+TEST_URL=https://www.google.com
